--- a/assets/css/portfolioStyle.css
+++ b/assets/css/portfolioStyle.css
@@ -1,3 +1,47 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 header {
 	background-color: white;
 	width: auto;
@@ -45,7 +89,7 @@ footer {
 	background-color: white;
 	float: left;
 	width: 40%;
-	height: 350px;
+	height: 375px;
 	margin-left: 10%;
 }
 
@@ -101,10 +145,6 @@ footer {
 	padding-right: 10px;
 }
 
-.paragraph {
-	float: none;
-	font-size: 20px;
-}
 
 .copyWrite {
 	font-size: 10px;
@@ -124,4 +164,38 @@ footer {
 	color: #0099cc;
 }
 
+.hangman {
+	width: 150px;
+	height: 150px;
+	float: left;
+	margin-left: 75px;
+	margin-bottom: 25px;
+}
 
+.rpg {
+	width: 150px;
+	height: 150px;
+	float: right;
+	margin-right: 75px;
+	margin-bottom: 25px;
+}
+
+.trivia {
+	width: 150px;
+	height: 150px;
+	float: left;
+	margin-left: 75px;	
+}
+
+.rockpaperscissors {
+	width: 150px;
+	height: 150px;
+	float: right;
+	margin-right: 75px;
+}
+
+.imageBreak {
+	height: 25px;
+	background-color: white;
+	color: black;
+}
